# rocketnotes

./: .gitignore  .gitpod.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sam  GEMINI.md  INSTALLATION.md  LICENSE  README.md  ROADMAP.md  cdk.json  docker-compose.yaml  dynamodb-init.sh  gitpod.yml  go.mod  go.sum  package.json  pyproject.toml  take-nifty-notes.go  take-nifty-notes_test.go  template.yaml
.github/workflows/: build-main.yaml  build-pr.yaml  build-pull-request.yaml  build-release.yaml  build-reusable-workflow.yaml  build.yaml  build.yml  code-review.yaml  deploy.yaml  deploy.yml  docker-build-and-publish.yaml  electron-build-and-publish.yaml  main.yml  (+2 more)
aws-cdk/: cdk.json  clean-notes-aws-cdk.go  clean-notes-aws-cdk_test.go  go.mod  go.sum
cdk/: cdk.json  rocketnotes.go
docs/: oauth-setup.md
handler-ai/: README.md  cdk.json  pyproject.toml
handler-ai/rocketnotes_handler/: rocketnotes_handler_stack.py
handler-ai/rocketnotes_handler/handler_insert/: main.py  requirements.lambda.txt
handler-ai/rocketnotes_handler/handler_semantic_search/: Dockerfile  main.py  requirements.lambda.txt  requirements.local.txt
handler-ai/rocketnotes_handler/handler_vector_embeddings/: main.py  requirements.lambda.txt  requirements.local.txt
handler-ai/rocketnotes_handler/handler_vibe/: Dockerfile  main.py  requirements.lambda.txt
handler-ai/rocketnotes_handler/lib/: cluster.py  graph.py  insert.py  merge.py  util.py  vector_store_factory.py
handler-ai/tests/lib/: cluster_test.py
handler-ai/tests/unit/: test_vector_embeddings_handler.py
handler-py/: README.md  app.py  pyproject.toml
handler-py/rocketnotes_handler/: rocketnotes_handler_stack.py
handler-py/rocketnotes_handler/handler_chat/: Dockerfile  Dockerfile.local  main.py  requirements.local.txt
handler-py/rocketnotes_handler/handler_insert/: Dockerfile  main.py
handler-py/rocketnotes_handler/handler_semantic_search/: Dockerfile.local  main.py  requirements.lambda.txt  requirements.local.txt
handler-py/rocketnotes_handler/handler_vector_embeddings/: Dockerfile  Dockerfile.local  main.py  requirements.lambda.txt  requirements.local.txt
handler-py/rocketnotes_handler/handler_vibe/: Dockerfile  graph.py  main.py  requirements.lambda.txt
handler-py/rocketnotes_handler/lib/: graph.py  insert.py  model.py  util.py  vector_store_factory.py
handler-py/tests/lib/: cluster_test.py
handler-py/tests/unit/: test_chat_handler.py  test_rocketnotes_agents_stack.py  test_semantic_search_handler.py  test_vector_embeddings_handler.py
landing-page/: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json
mcp/: README.md  auth.py  main.py  pyproject.toml  server.py
mcp/rocketnotes-mcp/: __main__.py  auth.py  server.py
mcp/rocketnotes_mcp/: server.py
webapp/: .eslintrc.json  .gitignore  Dockerfile  README.md  angular.json  electron-builder.json  electron.js  karma.conf.js  package-lock.json  package.json  server.js  set-env.mjs  tsconfig.json
(+133 files in other folders)
