[project]
name = "rocketnotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.34.0",
    "httpx>=0.28.1",
    "langchain==0.1.16",
    "langchain-anthropic==0.1.8",
    "langchain-community==0.0.32",
    "langchain-core==0.1.42",
    "langchain-openai==0.0.5",
    "mcp[cli]>=1.6.0",
]

[tool.uv.sources]
rocketnotes-mcp = { workspace = true }

[tool.uv.workspace]
members = ["mcp"]
