[project]
name = "rocketnotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.34.0",
    "httpx>=0.28.1",
    "faiss-cpu==1.11.0",
    "langchain==0.3.24",
    "langchain-anthropic==0.3.12",
    "langchain-community==0.3.23",
    "langchain-core==0.3.56",
    "langchain-openai==0.3.14",
    "langchain-text-splitters==0.3.8",
    "langchain-together==0.3.0",
    "mcp[cli]>=1.6.0",
]

[tool.uv.sources]
rocketnotes-mcp = { workspace = true }

[tool.uv.workspace]
members = ["mcp"]
