[project]
name = "rocketnotes_handler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
	"boto3>=1.39.7",
	"chromadb==0.4.22",
	"httpx>=0.28.1",
	"langchain>=0.3.26",
	"langchain-anthropic==0.3.12",
	"langchain-aws==0.2.35",
	"langchain-chroma==0.1.4",
	"langchain-community==0.3.27",
	"langchain-core>=0.3.81",
	"langchain-openai==0.3.14",
	"langchain-text-splitters==0.3.9",
	"langchain-together==0.3.0",
	"langgraph==0.4.8",
	"numpy>=1.24.0",
	"scikit-learn>=1.6.1",
]

[project.optional-dependencies]
dev = [
	"pytest==7.4.4",
	"moto[dynamodb,s3]>=4.0.0",
	"aws-cdk-lib==2.190.0",
	"constructs>=10.0.0,<11.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
