[project]
name = "rocketnotes_mcp"
version = "0.1.0"
description = "Rocketnotes mcp server"
readme = "README.md"
requires-python = ">=3.11"

dependencies = ["httpx>=0.28.1", "mcp[cli]>=1.6.0"]

[project.scripts]
rocketnotes-mcp = "rocketnotes_mcp.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["."]
